--- a/puppies.html
+++ b/puppies.html
@@ -72,7 +72,7 @@
             <div class="card puppy">
                 <h1>girl, blue merle, parti-colored eyes</h1>
                 <img src="images/puppies/2025/mfp3.jpeg" alt="frenchie puppy">
-                <img src="images/puppies/2025/mfp4.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/mfp2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mfp1.jpeg" alt="frenchie puppy">
             </div>
             
@@ -84,7 +84,7 @@
             </div>
 
             <div class="card puppy">
-                <h1>boy, blue merle</h1>
+                <h1>boy, blue merle "mr buggy"</h1>
                 <img src="images/puppies/2025/mm1.jpg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm3.jpg" alt="frenchie puppy">
