--- a/puppies.html
+++ b/puppies.html
@@ -49,8 +49,8 @@
         <div class="container p-5">
         
 
-            <h1 class="xl">Puppies Available NOW: Nov 26th, 2025 </h1>
-            <p class="lead">Happy Thanksgiving! We are so blessed and excited for the Holiday Season this year. We are very motivated to find the right home for the rest of Silvia's merles. Please text 214.406.4578 for the most up-to-date pictures and videos, or to schedule a video call. 
+            <h1 class="xl">Puppies Available NOW: Nov 28th, 2025 </h1>
+            <p class="lead">Happy Holidays! We are so blessed and excited for the Holiday Season this year. We are very motivated to find the right home for the rest of Silvia's merles. Please text 214.406.4578 for the most up-to-date pictures and videos, or to schedule a video call. 
                 All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. The prices of the puppies vary depending on sex and color. 
                 Delivery is available, and we can always work with you to find the perfect delivery date for your puppy. 
 
@@ -70,21 +70,21 @@
             </div>  -->
 
             <div class="card puppy">
-                <h1>girl, blue merle, parti-colored eyes</h1>
+                <h1>girl, blue merle, parti-colored eyes - $4,000</h1>
                 <img src="images/puppies/2025/mfp3.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mfp2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mfp1.jpeg" alt="frenchie puppy">
             </div>
             
             <div class="card puppy">
-                <h1>girl, blue merle</h1>
+                <h1>girl, blue merle $4,000</h1>
                 <img src="images/puppies/2025/mf1.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mf2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mf3.jpeg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
-                <h1>boy, blue merle "mr buggy"</h1>
+                <h1>boy, blue merle $3,000</h1>
                 <img src="images/puppies/2025/mm1.jpg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm3.jpg" alt="frenchie puppy">
