--- a/puppies.html
+++ b/puppies.html
@@ -70,21 +70,23 @@
             </div>  -->
 
             <div class="card puppy">
-                <h1>girl, blue merle, parti-colored eyes - $4,000</h1>
+                <h1>girl, blue merle, parti-colored eyes </h1>
                 <img src="images/puppies/2025/mfp3.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mfp2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mfp1.jpeg" alt="frenchie puppy">
             </div>
             
             <div class="card puppy">
-                <h1>girl, blue merle $4,000</h1>
+                <h1>girl, blue merle </h1>
                 <img src="images/puppies/2025/mf1.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mf2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mf3.jpeg" alt="frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD</h3>
             </div>
 
             <div class="card puppy">
-                <h1>boy, blue merle $3,000</h1>
+                <h1>boy, blue merle </h1>
                 <img src="images/puppies/2025/mm1.jpg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm3.jpg" alt="frenchie puppy">
