--- a/puppies.html
+++ b/puppies.html
@@ -90,6 +90,8 @@
                 <img src="images/puppies/2025/mm1.jpg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm3.jpg" alt="frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD</h3>
             </div> 
             
 
