--- a/puppies.html
+++ b/puppies.html
@@ -49,8 +49,8 @@
         <div class="container p-5">
         
 
-            <h1 class="xl">Puppies Available NOW: Dec 26th, 2025 </h1>
-            <p class="lead">Happy Holidays! We are so blessed and excited for the Holiday Season this year. Please text 214.406.4578 for the most up-to-date pictures and videos, or to schedule a video call. 
+            <h1 class="xl">Puppies Available NOW: Jan 7th, 2026 </h1>
+            <p class="lead">Happy New Year! We are so blessed and excited for 2026. Please text 214.406.4578 for the most up-to-date pictures and videos, or to schedule a video call. 
                 All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. The prices of the puppies vary depending on sex and color. 
                 Delivery is available, and we can always work with you to find the perfect delivery date for your puppy. 
 
@@ -72,8 +72,8 @@
             <div class="card puppy">
                 <h1>boy,chocolate fluffy merle </h1>
                 <img src="images/puppies/2025/cmf1.jpeg" alt="frenchie puppy">
-                <img src="images/puppies/2025/cmf2.jpeg" alt="frenchie puppy">
-                <img src="images/puppies/2025/cmf3.jpeg" alt="frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD Conroe, TX</h3>
             </div>
             
             <div class="card puppy">
