--- a/puppies.html
+++ b/puppies.html
@@ -63,7 +63,6 @@
 
             <div class="card puppy">
                 <h1>girl 1, lilac and tan </h1>
-                <img src="images/puppies/2025/femaleone1.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/femaleone2.jpeg" alt="frenchie puppy">
             </div>
 
@@ -85,12 +84,12 @@
                 <img src="images/puppies/2025/maletwo2.jpeg" alt="frenchie puppy">
             </div>
 
-            <div class="card puppy">
+            <!-- <div class="card puppy">
                 <h1>boy,chocolate fluffy merle </h1>
                 <img src="images/puppies/2025/cmf1.jpeg" alt="frenchie puppy">
                 <div class="sold">SOLD</div>
                 <h3>SOLD Conroe, TX</h3>
-            </div>
+            </div> -->
             
         </div>
     </section>    
