--- a/puppies.html
+++ b/puppies.html
@@ -49,8 +49,8 @@
         <div class="container p-5">
         
 
-            <h1 class="xl">Puppies Available NOW: Jan 27th, 2026 </h1>
-            <p class="lead">Happy New Year! We are so blessed and excited for 2026. Gemma and Bodie's lilac and tan puppies are so friggin' adorable. Please text 214.406.4578 for the most up-to-date pictures and videos, or to schedule a video call. 
+            <h1 class="xl">Puppies Available NOW: Feb 11th, 2026 </h1>
+            <p class="lead">Happy Valentine's! We are so blessed and excited for 2026. Gemma and Bodie's lilac and tan puppies are so friggin' adorable. Please text 214.406.4578 for the most up-to-date pictures and videos, or to schedule a video call. 
                 All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. The prices of the puppies vary depending on sex and color. 
                 Delivery is available, and we can always work with you to find the perfect delivery date for your puppy. 
 
@@ -63,19 +63,31 @@
 
             <div class="card puppy">
                 <h1>girl 1, lilac and tan </h1>
-                <img src="images/puppies/2025/femaleone2.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/ltf1.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/ltf2.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/ltf3.jpeg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
-                <h1>girl 2, lilac and tan </h1>
-                <img src="images/puppies/2025/femaletwo1.jpeg" alt="frenchie puppy">
-                <img src="images/puppies/2025/femaletwo2.jpeg" alt="frenchie puppy">
+                <h1>girl 2, lilac and tan, micro </h1>
+                <img src="images/puppies/2025/ltfm1.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025//ltfm2.JPG" alt="frenchie puppy">
             </div>
             
             <div class="card puppy">
-                <h1>boy 1, lilac and tan </h1>
-                <img src="images/puppies/2025/maletwo1.jpeg" alt="frenchie puppy">
-                <img src="images/puppies/2025/maletwo2.jpeg" alt="frenchie puppy">
+                <h1>boy, lilac and tan, micro</h1>
+                <img src="images/puppies/2025/ltmm1.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/ltmm2.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/ltmm3.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/ltmm4.jpeg" alt="frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>boy, merle, fluffy carrier</h1>
+                <img src="images/puppies/2025/mm1.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/mm2.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/mm3.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/mm4.jpeg" alt="frenchie puppy">
             </div>
 
             <!-- <div class="card puppy">
